# claude-code

./: .gitattributes  CLAUDE.md  README.md  README_RU.md  pixi.toml
loader/: .gitignore  Cargo.toml  Makefile  NOTICE  build.rs  patch_agy_wsl1.py  transparent_shim.sh
loader/.cargo/: config.toml
loader/glibc/: prune-glibc.sh  rtld-dispatch.patch
loader/glibc/glibc-2.42-rtld/PREBUILT/: abi-versions.h  cpu-features-offsets.h  descr-const.h  dl-tunable-list.h  first-versions.h  jmp_buf-macros.h  ldbl-compat-choose.h  libc-abis.h  libio-macros.h  link-defines.h  locale-defines.h  rtld-offsets.h  runtime-linker.h  sigaltstack-offsets.h  tcb-offsets.h  ucontext_i.h
loader/glibc/glibc-2.42-rtld/PREBUILT/csu/: abi-tag.h
loader/glibc/glibc-2.42-rtld/PREBUILT/intl/: msgs.h
loader/glibc/glibc-2.42-rtld/PREBUILT/locale/: C-translit.h
loader/glibc/glibc-2.42-rtld/PREBUILT/misc/bits/: syscall.h
loader/glibc/glibc-2.42-rtld/PREBUILT/posix/: posix-conf-vars-def.h
loader/glibc/glibc-2.42-rtld/elf/: Makefile  librtld.mk.vendored  rtld.c
loader/glibc/slackware/: glibc.SlackBuild.reference
loader/src/: main.rs
